[package]
name = "snx"
version = "0.0.3"
edition = "2021"
description = "an experimental batteries-included web framework for Rust"
authors = ["Julian Ollivieira"]
documentation = "https://docs.rs/snx"
repository = "https://github.com/snx-rs/snx"
license = "MIT"

[dependencies]
# threading
rayon = "1.10.0"

# http and routing
httparse = "1.9.5"
matchit = "0.8.6"
regex = "1.11.1"

# error handling
thiserror = "2.0.11"
anyhow = "1.0.95"

# configuration and logging
toml = "0.8.19"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

# other
serde = { version = "1.0.217", features = ["derive"] }
chrono = "0.4.39"
